--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.6.4.201312101107</version>
@@ -210,7 +210,7 @@
 					</goals>
 				</execution>
 			</executions>
-		</plugin>
+		</plugin> -->
 
         </plugins>
 		<finalName>addressbook</finalName>
@@ -219,7 +219,7 @@
 	  
     <reporting>
     <plugins>
-      <plugin>
+     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
         <version>2.19.1</version>
